# plattis

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  main.cc
plattis/: camera.hh  color.hh  core.cc  core.hh  enemy.cc  enemy.hh  image.cc  image.hh  map.cc  map.hh  platform.hh  player.cc  player.hh  rectangle.cc  rectangle.hh  renderer.cc  renderer.hh  util.cc  util.hh  vector2.hh  window.cc  window.hh
